agregando parrafos de prueba

--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
         </nav>
     </header>
     <main>
+        <section>
+            <div>
+                <p>parafos de prueba</p>
+                <p>parafos de prueba</p>
+                <p>parafos de prueba</p>
+                <p>parafos de prueba</p>
+                <p>parafos de prueba</p>
+                <p>parafos de prueba</p>
+                <p>parafos de prueba</p>
+                <p>parafos de prueba</p>
+                <p>parafos de prueba</p>
+                <p>parafos de prueba</p>
+                <p>parafos de prueba</p>
+                <p>parafos de prueba</p>
+                <p>parafos de prueba</p>
+            </div>
+        </section>
         <button class="btn"></button>
     </main>
     <footer>
