--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
         <button class="btn"></button>
     </main>
     <footer>
-
+        <section>
+            <p>parrafos nuevos de prueba</p>
+            <p>parrafos nuevos de prueba</p>
+            <p>parrafos nuevos de prueba</p>
+            <p>parrafos nuevos de prueba</p>
+            <p>parrafos nuevos de prueba</p>
+            <p>parrafos nuevos de prueba</p>
+            <p>parrafos nuevos de prueba</p>
+            <p>parrafos nuevos de prueba</p>
+            <p>parrafos nuevos de prueba</p>
+            <p>parrafos nuevos de prueba</p>
+        </section>
     </footer>
     <script src="./main.js"></script>
 </body>
