agregando parrafos a header de prueba

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                 <li><a href="">Little</a></li>
                 <li><a href="">Camps</a></li>
             </ul>
+           <p>Mas parrafos de prueba</p>
+           <p>Mas parrafos de prueba</p>
+           <p>Mas parrafos de prueba</p>
+           <p>Mas parrafos de prueba</p>
+           <p>Mas parrafos de prueba</p>
+           <p>Mas parrafos de prueba</p>
         </nav>
     </header>
     <main>
